[metadata]
name = mqtttimeserieslogger-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = A very simple NPZ file time series logger for MQTT events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/mqtttimeserieslogger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: BSD :: FreeBSD

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	daemonize >= 2.5.0
	lockfile >= 0.12.2
	numpy >= 1.26.0
	paho-mqtt >= 2.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mqtttimeserieslogger = timeserieslogger.mqtttimeserieslogger:main
